<resources>
    <string name="whooing_authority" translatable="false">com.younggeon.whoolite.whooing</string>

    <string name="app_name">후라이</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">설정</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="next">다음</string>
    <string name="thank_you_message">후라이를 설치해주셔서 감사합니다!\n사용을 위해 후잉로그인이 필요합니다.</string>
    <string name="login">로그인</string>
    <string name="failed_to_receive_token">로그인을 하기 위한 정보를 가져오지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="retry">다시 시도</string>
    <string name="instruction_1">"자주입력 거래들" 기능을 사용해서 가볍게 거래 항목을 입력하세요!</string>
    <string name="instruction_2">"거래 내역"을 통해서 쉽게 가볍게 "자주입력 거래들" 항목을 생성하세요!</string>
    <string name="instruction_3">이제 후잉에 로그인 하면 후라이를 시작하실 수 있습니다.</string>
    <string name="ok">확인</string>
    <string name="please_wait">잠시만 기다려주세요</string>
    <string name="section_title_format">%1$s(%2$s)</string>
    <string name="no_sections">섹션 정보 없음</string>
    <string name="no_sections_message">섹션 정보를 다운받지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="token_expired">토큰 만료됨</string>
    <string name="token_expired_message">인증토큰이 만료되어 다시 로그인 하셔야 합니다.</string>
    <string name="re_login">다시 로그인</string>
    <string name="no_history">가계부 항목을 입력한 내용이 없습니다. + 버튼을 눌러서 항목을 입력해보세요!</string>
    <string name="frequently_input">자주입력 거래들</string>
    <string name="entries">거래내역</string>
    <string name="no_frequent_items">자주입력 거래들 항목이 없습니다. 거래내역 탭에서 항목을 만들어보세요!</string>
    <string name="failed_to_receive_frequent_item">자주입력 거래들 항목을 가져오지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="description_input_icon">항목 선택</string>
    <string name="not_assigned">(지정 안 됨)</string>
    <string name="slot_name">%1$d번 슬롯</string>
    <string name="currency_format">%1$s%2$s</string>
    <string name="description_send">거래 입력</string>
    <string name="input_entry_failed">거래 입력 실패</string>
    <string name="input_entry_failed_message_with_item_title">[%1$s] 거래를 입력하지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="cancel_input">입력 취소</string>
    <string name="input_entry_success_with_item_title">[%1$s] 거래를 입력하였습니다.</string>
    <string name="action_delete_selected_items">선택된 항목 삭제</string>
    <string name="item_selected">%1$d개 항목 선택됨</string>
    <string name="delete_confirm">삭제 확인</string>
    <string name="delete_frequent_items_confirm">선택하신 %1$d개의 자주입력 거래들 항목을 삭제하시겠습니까?</string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
    <string name="deleting">삭제중</string>
    <string name="delete_selected_items_failed">선택하신 항목을 삭제하지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="selected_items_deleted">선택하신 항목이 삭제되었습니다.</string>
    <string name="action_reorder">순서 변경</string>
    <string name="title_activity_frequently_input_item_detail">자주입력 거래</string>
    <string name="item">아이템</string>
    <string name="money">금액</string>
    <string name="unknown">(알 수 없음)</string>
    <string name="assets">자산</string>
    <string name="liabilities">부채</string>
    <string name="capital">순자산</string>
    <string name="expenses">비용</string>
    <string name="income">수익</string>
    <string name="action_done">수정</string>
    <string name="action_send">거래 입력</string>
    <string name="action_delete">삭제</string>
    <string name="input_item_title">아이템 이름을 입력해주세요.</string>
    <string name="save_failed">저장 실패</string>
    <string name="save_frequent_item_failed">자주입력 거래를 수정하지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="input_entry_failed_message">거래를 입력하지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="input_entry_success">거래를 입력하였습니다.</string>
    <string name="edit_entry_success">거래가 수정되었습니다.</string>
    <string name="delete_frequent_item_failed">자주입력 거래를 삭제하지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="delete_failed">삭제 실패</string>
    <string name="delete_frequent_item_confirm">자주입력 거래를 삭제하시겠습니까?</string>
    <string name="failed_to_receive_entries">거래내역 항목을 가져오지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="no_entries">거래내역이 없습니다. 아래쪽 버튼을 눌러서 거래를 입력해보세요!</string>
    <string name="delete_entries_confirm">선택하신 %1$d개의 거래내역을 삭제하시겠습니까?</string>
    <string name="action_bookmark">자주입력 거래로 설정</string>
    <string name="select_slot_number">슬롯 번호 선택</string>
    <string name="bookmarking">자주 입력 거래 저장중</string>
    <string name="bookmark_failed">자주 입력 거래 저장 실패</string>
    <string name="bookmark_item_failed">자주 입력 거래를 저장하지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="bookmark_selected_item_success">선택하신 항목을 자주 입력 거래로 저장하였습니다.</string>
    <string name="title_activity_history_detail">거래내역</string>
    <string name="delete_entry_faield">거래내역을 삭제하지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="delete_entry_confirm">거래내역을 삭제하시겠습니까?</string>
    <string name="action_edit_send">거래 수정</string>
    <string name="memo">메모</string>
    <string name="bookmark_success">자주 입력 거래로 저장되었습니다.</string>
    <string name="edit_failed">수정 실패</string>
    <string name="edit_entry_failed">거래내역을 수정하지 못했습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="action_logout">로그아웃</string>
    <string name="action_search">검색</string>
    <string name="action_search_hint">자주입력 거래들 검색</string>
    <string name="no_search_result">검색결과가 없습니다.</string>
    <string name="title_activity_settings">설정</string>
    <string name="show_slot_numbers">표시할 자주입력 거래 슬롯 번호</string>
    <string name="show_slot_numbers_dialog_title">슬롯 번호 선택</string>
    <string name="frequently_input_sort_order">자주입력 거래 정렬 방식</string>
    <string name="frequently_input_dialog_title">정렬 방식 선택</string>
    <string name="all">모든</string>
    <string name="numbering">%1$d번</string>
    <string name="slot">슬롯</string>
    <string name="start">시작하기</string>
    <string name="action_skip">건너뛰기</string>
    <string name="description_write">쓰기</string>
    <string name="manual_1">쓰기 버튼을 터치하여 거래 내역을 입력하실 수 있습니다.</string>
    <string name="manual_2">거래내역을 터치하여 수정하거나 자주입력 거래 항목을 생성할 수 있습니다.</string>
    <string name="manual_3">거래 입력 버튼을 터치하거나 길게 눌러 바로 입력하거나 수정 후 입력할 수 있습니다.</string>
    <string name="action_copy">복사</string>
    <string name="search_keyword">검색용 키워드</string>
    <string name="merge">병합하기</string>
    <string name="merge_confirm">최근 내역중에 같은 내용으로 입력된 항목이 있습니다. 금액을 더해서 하나의 항목으로 병합할까요?</string>
    <string name="new_entry">새 항목으로 입력</string>
    <string name="edit_this_entry_only">이 항목만 수정</string>

    <string-array name="pref_show_slot_number_titles">
        <item>1번 슬롯</item>
        <item>2번 슬롯</item>
        <item>3번 슬롯</item>
    </string-array>

    <string-array name="pref_frequently_input_sort_order_titles">
        <item>서버에 설정된대로</item>
        <item>자주사용한 순서로</item>
        <item>최근 사용한 순서로</item>
    </string-array>
    <string name="title_activity_manual">사용법</string>
    <string name="title_activity_select_merging_entry">병합할 항목 선택</string>
</resources>
