<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.younggeon.whoolite.activity.HistoryDetailActivity">
    <item
        android:id="@+id/action_bookmark"
        android:orderInCategory="100"
        android:title="@string/action_bookmark"
        android:icon="@drawable/ic_bookmark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send"
        android:orderInCategory="101"
        android:title="@string/action_edit_send"
        android:icon="@drawable/ic_check"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="102"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />
</menu>
